# Qt_test

./: .gitignore  EyeOpenClose_aaaaaaaa_20251110160952_blocks4_DONE.txt  example_send_trigger.py  main.py  page1.py  page10.py  page10_realtime.py  page11_pupil.py  page2.py  page2_data_collection.py  page3.py  page4.py  page4_nback.py  page5.py  page5_stroop.py  page6.py  page6_ma.py  page7.py  page7_mill.py  page7_mill_backup.py  page8.py  page8_miul.py  page9.py  page9_eye.py  pyproject.toml  run.ps1  test.py
configs/: data_eye_movement.yaml  train.yaml
logs/: EEGMI_a_20250916171809_trials12_DONE.txt
models/: models.py
pretrained_models/my_eeg_dataset_eye_movement/: pretrained_model_EEGNet.pth  scaler.joblib
process/: process.py
styles/: styles.qss
training_helpers/: __init__.py  realtime_utils.py
ui/: my_ui - 副本.ui  my_ui.py  my_ui.ui  video_frame.py  video_frame.ui
util/: EEGReceiver.py  TCPClientSide.py
utils/: __init__.py  config.py
