[project]
name = "qt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pyttsx3>=2.99",
    "qtgui>=0.0.1",
    "braindecode>=1.0.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.8",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.3",
    "mne>=1.9.0",
    "mne-icalabel>=0.7.0",
    "moabb==1.2.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pyinstaller>=6.14.2",
    "pytorch-lightning>=2.5.5",
    "pyyaml>=6.0.2",
    "scikit-learn==1.5.2",
    "seaborn==0.12.2",
    "skorch>=1.1.0",
    "torch>=2.7.1",
    "torchsummary>=1.5.1",
]
